# nbodyintegrator

integrator/: Cargo.toml
integrator/src/: archiving.rs  bench.rs  lib.rs  main.rs  maths.rs  particle.rs  systems.rs  traits.rs
integrator/src/solvers/: euclidean.rs  euclideansheet.rs  ias.rs  iassheet.rs  iasv1.rs  iasv2.rs  iaswedge.rs  mod.rs
visuals/: Cargo.toml
visuals/src/: camera.rs  graph.rs  main.rs  window_utils.rs  winit_app.rs
